--- a/Project/Project Stage-III.ipynb
+++ b/Project/Project Stage-III.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Tasks:\n",
     "\n",
-    "## Task 1: \n",
+    "## Task 1: (20%)\n",
     "- Team: \n",
     "    - Develop Linear and Non-Linear (polynomial) regression models for predicting cases and deaths in US. \n",
     "        - Start your data from the first day of infections in US. X-Axis - number of days since the first case, Y-Axis - number of new cases and deaths.\n",
@@ -45,14 +45,14 @@
     "        - Depending on your type of data you can also perform Chi-square test for categorical hypothesis testing. \n",
     "\n",
     "    \n",
-    "## Task 2: \n",
-    "- Member: (20 %)\n",
+    "## Task 2:(35%) \n",
+    "- Member: \n",
     "    - For each of the Member analyses plot graphs\n",
     "        - trend line\n",
     "        - confidence intervals (error in prediction)\n",
     "        - prediction path (forecast)\n",
     "\n",
-    "## Task 3: \n",
+    "## Task 3: (%35) \n",
     "- Team:\n",
     "    - Plotly:\n",
     "        - Incorporate your best model prediction trend line - Linear / Non-Linear. \n",
@@ -63,15 +63,17 @@
     "        - Show US map of cases or deaths (normalized by population). Entire US with county level information. Use mean of county population to normalize for cases and deaths. (10)\n",
     "        - Ex: https://coronavirus.jhu.edu/us-map\n",
     "\n",
-    "## Project Check-ins: :\n",
-    "- Member: (11 %) \n",
-    "    - Check-in: 4/4/22 \n",
+    "## Project Check-ins (10%) :\n",
+    "- Member: \n",
+    "    - Check-in: 4/6/22 \n",
     "        - Make **some meaningful** progress on Tasks available to view on Github. \n",
     "        - Contributions viewed from git commits\n",
+    "        - Meaningful does not mean an empty notebook or a few lines of code.\n",
     "        \n",
-    "    - Check-in: 4/11/22 \n",
+    "    - Check-in: 4/18/22 \n",
     "        - Make **some meaningful** progress on Tasks available to view on Github. \n",
     "        - Contributions viewed from git commits\n",
+    "        - Meaningful does not mean an empty notebook or a few lines of code.\n",
     "            \n",
     "\n",
     "\n",
